# ujudge

./: .gitignore  CMakeLists.txt  install.sh  judge.py  readme.md  setup.py  uninstall.sh
demo/: aplusb.pas  aplusb.py  demo.py  demo_judge_cpp.py  demo_judge_pas.py  demo_judge_py3.py
src/: makefile  run_program.cpp  run_program_conf.h  uoj_env.h
tests/Python_and_core/: test.py
tests/Python_and_core/testcase/: base.py
tests/Python_and_core/testcase/integration/: test.py
tests/test_src/integration/: a.out  aplusb.py  memory3.c  re2.c  stdout_stderr.c
